# cuda-wrapper

./: AUTHORS  CMakeLists.txt  LICENSE  README.rst
cuda_wrapper/: allocator.hpp  copy.hpp  cuda_wrapper.hpp  device.hpp  error.hpp  event.hpp  function.hpp  iterator_category.hpp  stream.hpp  symbol.hpp  texture.hpp  thread.hpp  traits.hpp  vector.hpp  version.hpp
cuda_wrapper/deprecated/: copy.hpp
cuda_wrapper/detail/: iterator_category_adaptor.hpp  iterator_tag.hpp  random_access_iterator.hpp
cuda_wrapper/device/: allocator.hpp  vector.hpp
cuda_wrapper/host/: allocator.hpp  vector.hpp
cuda_wrapper/memory/device/: allocator.hpp  vector.hpp
cuda_wrapper/memory/host/: allocator.hpp  vector.hpp
cuda_wrapper/memory/managed/: allocator.hpp  vector.hpp
examples/: CMakeLists.txt  cuda_wrapper
examples/first/: Makefile  kernel.cu  kernel.hpp  main.cpp
examples/minimal/: kernel.cu  kernel.hpp  main.cpp
test/: CMakeLists.txt  allocator.cpp  copy.cpp  device.cpp  event.cpp  event_kernel.cu  function.cpp  function_kernel.cu  host_allocator.cpp  host_vector.cpp  iterator.cpp  stream.cpp  test.hpp  texture.cpp  texture_kernel.cu  vector.cpp  version.cpp
